6_resilience/deployment-delay/vs-leaf1-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
spec:
  hosts:
    - leaf1
  http:
    - fault:
        delay:
          percent: 100
          fixedDelay: 3s
      route:
        - destination:
            host: leaf1
            port:
              number: 8080
